# dropout-plugin

./: Cargo.toml  README.md  lossgen_2000.pth  truce.toml
.github/workflows/: ci.yml  release.yml
src/: dsp.rs  lib.rs  main.rs
src/model/: mod.rs  parity_test.rs  test_vectors.rs  weights.rs
tools/: dump_reference.py  export_weights.py
ui/: main.slint
